2009-06-27  Chris Morley <c.morley@gaseq.co.uk>

	Make parsing of SMILES files stricter, following discussion on
	mailing list.
	* src/formats/smilesformat.cpp(Read Molecule):
	lines starting with # are ignored; lines starting with whitespace
	terminate (except with -e option); illegal chars reported;
	when using OBConversion::Convert(), the components of a SMILES reaction
	are output if it is a valid reaction with non-null reactant and product.
	
	(OBSmilesParser::SmiToMol): the string parameter is made const. This
	simplifies its use, e.g. can use substr. Similar changes would be useful
	elsewhere in OB. 
	 
	* src/formats/rsmiformat.cpp: re-written because of smilesformat changes.
	Now handles multiple reactants and products.

2009-06-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/zipstream*: Add support for tellg() / seekg(). Improves
	support for compressed mol2 files (although still bugs
	there). Positions from tellg() & seekg() mirror uncompressed data.

	* test/zipstream.cpp: New test to check if tellg/seekg support
	works.

2009-06-25  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/kekulize.cpp: Use SMARTS pattern "[aR3]" to determine if
	*any* atoms dictate a fused ring analysis. Fixes problem with
	perylene.

	* test/files/*.smi: Add perylene as a test example.

	* src/builder.cpp (GetNewBondVector): Fix part of PR#2811932 from
	Avogadro. Make sure adding hydrogens to carboxylic acid always
	occurs trans to the other oxygen atom.

	* src/data.cpp: Don't consider all sp3 hydrogens as O-, instead
	leave this for phmodel protonation. Fixes PR#2785237.

2009-06-24  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/mopacformat.cpp: Read and write translation vectors,
	if available.

	* src/formats/gaussformat.cpp: Ditto

	* src/generic.cpp (OBUnitCell): Make sure to set the space group
	to P1 by default and after FillUnitCell.

2009-06-22  Geoffrey Hutchison  <babel@geoffhutchison.net>
